Add AddUser functionality

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "1.6.6",
     "next": "12.1.4",
+    "ramda": "0.28.0",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
